--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -4,7 +4,7 @@
    
   /* Set a specific height */
   background-image: url("../sitefoto-left.jpg");
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
   background-position: right -200px center;
   background-repeat: repeat-x;
   background-size: cover;
@@ -121,7 +121,7 @@
       /* Set a specific height */
 
       background-image: url("../sitefoto-top.jpg");
-      /* background-attachment: fixed; */
+      background-attachment: scroll;
       background-position: bottom 60% center;
       background-size: cover;
       }
