Change position of name and motto

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,3 +1,18 @@
+html {
+  height: -webkit-fill-available;
+}
+
+#control-height {
+  height: 100vh;
+  width: 0;
+  position: absolute;
+}
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
 .hobby-box {
   width: 30%;
 }
@@ -93,8 +108,7 @@
   }
 
 .name-title {
-  position: relative;
-  top: 3%;
+  margin-top: 27%
 }
 
 .name-title-box {
@@ -155,7 +169,7 @@
   #about_me_text {
     font-size: 6vw;
     font-weight: 50;
-    bottom: 56% !important;
+    bottom: 80% !important;
     padding-left: 0rem;
     padding-right:0rem;
     line-height: 0rem;
