--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -37,7 +37,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 100%;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #black-text {
@@ -174,7 +175,7 @@ body {
     padding-top: 10%;
     font-size: 6vw;
     font-weight: 50;
-    bottom: 80% !important;
+    bottom: 78% !important;
     padding-left: 0rem;
     padding-right:0rem;
     line-height: 0rem;
