--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -174,7 +174,7 @@ body {
   #about_me_text {
     font-size: 6vw;
     font-weight: 50;
-    bottom: 78% !important;
+    bottom: 128vw !important;
     padding-left: 0rem;
     padding-right:0rem;
     line-height: 0rem;
