--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -110,10 +110,80 @@ body {
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
 
-@media (max-width: 961px) {
+@media (max-width: 960px) {
 #about_me_text {
   bottom: 15% !important;
+  margin-left:0px !important;
+  padding-left: 0px !important;
 }
+
+#black-text {
+  margin-left: 0px !important;
+  font-size: 5rem !important;
+}
+
+.parallax {
+  /* Set a specific height */
+  height: calc(var(--vh, 1vh) * 100);
+  background-image: url("../sitefoto-top.jpg");
+  background-attachment: scroll;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+
+.chevron::before {
+  mix-blend-mode: difference;
+  color:white;
+  border-width: 0.03em 0.03em 0 0;
+  display: inline-block;
+  height: 0.3em;
+  left: 0.15em;
+  position: relative;
+  top: 0.15em;
+  transform: rotate(-45deg);
+  vertical-align: top;
+  width: 0.3em;
+}
+
+
+.v-icon.chevron.mdi-chevron-down.black--text{
+
+}
+
+.chevron.bottom:before {
+  left: 17vw;
+}
+
+.name-title {
+
+  margin-top: 27%
+
+}
+
+.name-title-box {
+  margin-top: 26%;
+}
+
+  .hobby-box {
+    width: 100%;
+  }
+
+  .v-subheader {
+    /* align-items: center; */
+    /* display: flex; */
+    /* height: 48px; */
+    font-size: 0.875rem;
+    font-weight: 400;
+    margin-left: 15px;
+    /* padding: 0 16px 0 16px; */
+  }
+  .v-timeline-item__body {
+    padding-right: 10px !important;
+  }
+
+  
+
 }
 
 @media (max-width: 641px) {
@@ -208,13 +278,5 @@ body {
     text-shadow: 1px 1px #8f8484;
     font-weight: 100 !important;
     line-height: 16vw;
-  }
-}
-
-@media (min-width: 500px) and (max-width: 930px) {
-  /* Bei jedem größeren Monitor kommen neue Regeln hinzu */
-
-  #black-text {
-    font-size: 3rem !important;
   }
 }
