Language fix blockchain

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -370,11 +370,11 @@ body {
 
 
   .v-timeline-item__dot {
-    border-radius: 0%;
+    border-radius: 0% !important;
   }
 
   .v-timeline-item__dot {
-    border-radius: 0%;
+    border-radius: 0% !important;
   }
 
 }
