--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -111,6 +111,41 @@ body {
   border-radius: 0% !important;
 }
 
+
+
+
+.back {
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
+
+  .personal-info {
+    grid-column: 2 / span 6;
+    grid-row: 5 / span 6;
+  }
+  .personal-info p {
+      font-size: 16px;
+      margin-bottom: 0px;
+  }
+
+  .personal-info p:first-of-type {
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  .personal-info p:nth-of-type(2) {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+
+  .contact-card{
+    padding: 10px !important;
+    margin: 16px !important;
+  }
+
+
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
